Better handling of partial commands